--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
-streamlit==1.25.0
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.15.0
+numpy==1.26.2
+pandas==2.1.4
+scikit-learn==1.3.2
+streamlit==1.29.0
+matplotlib==3.8.2
+seaborn==0.13.1
+plotly==5.18.0
 pytest==7.4.0
 pytest-cov==4.1.0
 python-dotenv==1.0.0
@@ -14,3 +14,4 @@ flake8==6.1.0
 jupyter==1.0.0
 notebook==7.0.2
 psycopg2-binary==2.9.9
+pyarrow==14.0.2
