--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pytest==7.4.0
 pytest-cov==4.1.0
 python-dotenv==1.0.0
 sqlalchemy==2.0.19
+pymysql==1.0.2
 black==23.7.0
 flake8==6.1.0
 jupyter==1.0.0
